fix overflow work section

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,7 +6,6 @@
 
 body {
   background-color: #354c54;
-  overflow-x: hidden;
 }
 
 .heading {
