--- a/src/styles/workElements.scss
+++ b/src/styles/workElements.scss
@@ -7,6 +7,7 @@
   padding-bottom: 10rem;
   position: relative;
   align-items: center;
+  overflow-x: hidden;
 
   &:before {
     content: "<Work>";
